Entität Tag hinzugefügt und SS: HTTP Kommunikation in verteilten Systemen 3
